# dict-update-transit

./: .env.example  ai_context.py  cli.py  config.py  dictionary.py  history.py  hotkey_daemon.py  offline_dict.py  probe_sendinput.py  pyproject.toml  pytest.ini  requirements.txt
dictionary_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_dictionary.py  test_history.py  test_hotkey_daemon.py  test_offline_dict.py
