[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dictionary-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
    "click",
]

[project.scripts]
dict = "cli:main"

[tool.setuptools]
py-modules = ["cli", "dictionary"]
