[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dictionary-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
    "click",
    "openai",
    "pyttsx3",
    "pystray",
    "Pillow",
    "google-genai",
    "customtkinter",
]

[project.optional-dependencies]
offline = ["nltk"]
local-llm = ["llama-cpp-python>=0.3.0", "huggingface_hub"]

[project.scripts]
dict = "cli:main"
dict-daemon = "hotkey_daemon:main"

[tool.setuptools]
py-modules = [
    "cli",
    "dictionary",
    "hotkey_daemon",
    "ai_context",
    "config",
    "history",
    "offline_dict",
]
